mock-data/large-cluster/k8s/admissionregistration.k8s.io:ValidatingWebhookConfiguration/nodelimit.config.common-webhooks.networking.gke.io.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
    name: nodelimit.config.common-webhooks.networking.gke.io
    selfLink: >-
        /apis/admissionregistration.k8s.io/v1/validatingwebhookconfigurations/nodelimit.config.common-webhooks.networking.gke.io
    uid: 161ddd3f-0afe-4580-b1b0-91b1b9e50bb5
    resourceVersion: '273579600'
    generation: 2
    creationTimestamp: '2021-05-11T16:14:51Z'
    labels:
        networking.gke.io/common-webhooks: 'true'
    annotations:
        common-webhooks.networking.gke.io/webhook-name: nodelimit
    managedFields:
        -
            manager: gke-common-webhooks
            operation: Update
            apiVersion: admissionregistration.k8s.io/v1beta1
            time: '2021-05-11T16:14:51Z'
            fieldsType: FieldsV1
            fieldsV1:
                'f:metadata':
                    'f:annotations':
                        .: {}
                        'f:common-webhooks.networking.gke.io/webhook-name': {}
                    'f:labels':
                        .: {}
                        'f:networking.gke.io/common-webhooks': {}
                'f:webhooks':
                    .: {}
                    'k:{"name":"nodelimit.common-webhooks.networking.gke.io"}':
                        .: {}
                        'f:admissionReviewVersions': {}
                        'f:clientConfig':
                            .: {}
                            'f:caBundle': {}
                            'f:url': {}
                        'f:failurePolicy': {}
                        'f:name': {}
                        'f:namespaceSelector': {}
                        'f:objectSelector': {}
                        'f:rules': {}
                        'f:sideEffects': {}
        -
            manager: gke-common-webhooks
            operation: Update
            apiVersion: admissionregistration.k8s.io/v1
            time: '2021-07-30T21:43:21Z'
            fieldsType: FieldsV1
            fieldsV1:
                'f:webhooks':
                    'k:{"name":"nodelimit.common-webhooks.networking.gke.io"}':
                        'f:matchPolicy': {}
                        'f:timeoutSeconds': {}
webhooks:
    -
        name: nodelimit.common-webhooks.networking.gke.io
        clientConfig:
            url: 'https://localhost:5443/webhook/nodelimit'
            caBundle: >-
                LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQU9mZXR4Uzc5VWlnUkNwdVR2Rm4xL2N3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa1ptWTVZbVkyTURVdE1EbGtOaTAwWmpCbUxXRXlabVl0WkRnek1XUTFNRFl3WVdFegpNQjRYRFRJd01ERXhNVEEwTlRneE9Wb1hEVEkxTURFd09UQTFOVGd4T1Zvd0x6RXRNQ3NHQTFVRUF4TWtabVk1ClltWTJNRFV0TURsa05pMDBaakJtTFdFeVptWXRaRGd6TVdRMU1EWXdZV0V6TUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBM2RsZ2FzditRWHczRWxTZVFGa3phSlF0RzhidGRSVzRnT2J5RU94cQpqOGsvVlp1Uk9T [...]
        rules:
            -
                operations:
                    - CREATE
                apiGroups:
                    - ''
                apiVersions:
                    - v1
                resources:
                    - nodes
                scope: '*'
        failurePolicy: Ignore
        matchPolicy: Equivalent
        namespaceSelector: {}
        objectSelector: {}
        sideEffects: None
        timeoutSeconds: 10
        admissionReviewVersions:
            - v1beta1
